fixed select not visibele issue

--- a/src/css/_question.scss
+++ b/src/css/_question.scss
@@ -307,7 +307,7 @@ p.cc-thankyou-powered{
 	}
 	.cc-question-container__content{
 		max-height:100px;
-		overflow:hidden;
+		// overflow:hidden;
 	}
 }
 
@@ -538,7 +538,6 @@ p.cc-thankyou-powered{
 		margin:20px;
 		right:0;
 		top:0;
-
 	}
 	.cc-popup-container__back {
 		background-image: url(https://cx.getcloudcherry.com/microsurvey-assets/Back_Icon_.svg);
